--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,24 @@
 Package: tableauR
 Type: Package
-Title: What the Package Does (Title Case)
+Title: tableauR
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: c(
+    person("Tobias Matz", email = "tobias.matz@ioki.com", role = c("aut", "cre")))
+Maintainer: Tobias Matz <tobias.matz@ioki.com>
+URL: https://github.com/tom-ioki/tableauR
+BugReports: https://github.com/tom-ioki/tableauR/issues
+Description: Bindings for the Tableau Server REST API in form of a nice and convenient R package.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.1.1
+Imports: 
+    magrittr,
+    httr,
+    XML,
+    jsonlite
+Suggests: 
+    testthat,
+    stubthat,
+    lintr,
+    covr
