Fix errors in DESCRIPTION and sign_in documentation and add check_for_api_errors to sign_out

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,9 +1,10 @@
 Package: tableauR
 Type: Package
-Title: tableauR
+Title: tableauR - Bindings for the Tableau Server REST API
 Version: 0.1.0
-Author: c(
-    person("Tobias Matz", email = "tobias.matz@ioki.com", role = c("aut", "cre")))
+Authors@R: c(
+    person("Tobias Matz", email = "tobias.matz@ioki.com", role = c("aut", "cre"))
+    )
 Maintainer: Tobias Matz <tobias.matz@ioki.com>
 URL: https://github.com/tom-ioki/tableauR
 BugReports: https://github.com/tom-ioki/tableauR/issues
